--- a/public/src/_my.scss
+++ b/public/src/_my.scss
@@ -2,16 +2,6 @@
     width: 8%;
 }
 
-// Bootstrap
-.row {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: #eee;
-    background-color: rgba(86, 61, 124, .15);
-    border: 1px solid #ddd;
-    border: 1px solid rgba(86, 61, 124, .2);
-}
-
 .reveal .row {
     margin-bottom: 15px;
 }
@@ -70,4 +60,23 @@ ins.code {
 
 .reveal li {
     font-size: 52px;
+}
+
+// Bootstrap
+.show-grid [class^=col-] {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #eee;
+    background-color: rgba(86, 61, 124, .15);
+    border: 1px solid #ddd;
+    border: 1px solid rgba(86, 61, 124, .2);
+}
+
+.reveal .columns-t, .reveal .column, .reveal .columns {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #eee;
+    background-color: rgba(86, 61, 124, 0.15);
+    border: 1px solid #ddd;
+    border: 1px solid rgba(86, 61, 124, 0.2);
 }
